force-app/main/default/objects/BI_Metric__c/BI_Metric__c.object-meta.xml
<CustomObject>
    <description>Data points on important business information for standard SF objects - Lead, Contact, Account and Opportunity. Can be customized to support custom objects.</description>
    <label>BI Metric</label>
    <nameField>
        <displayFormat>BI-{0000}</displayFormat>
        <label>BI Metric Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BI Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>