force-app/main/default/objects/BI_Metric__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the BI metric is for an account, link here</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Account_BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>