force-app/main/default/objects/BI_Metric__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Case for which this BI Metric is being tracked.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Case_BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>