force-app/main/default/objects/BI_Metric__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <description>Date that the record field was updated out of this value</description>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>