force-app/main/default/objects/BI_Metric__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the BI Metric is for a contact, link here.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Contact_BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>