force-app/main/default/objects/BI_Metric__c/fields/Days_in_Stage__c.field-meta.xml
<CustomField>
    <fullName>Days_in_Stage__c</fullName>
    <description>How many days is the parent record in this stage?</description>
    <formula>if(isnull(Completed_Date__c), TODAY() - Start_Date__c, Completed_Date__c - Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days in Stage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>