force-app/main/default/objects/BI_Metric__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If this BI metric is related to a Lead, link here.</description>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipName>Lead_BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>