force-app/main/default/objects/BI_Metric__c/fields/Lifecycle_Field__c.field-meta.xml
<CustomField>
    <fullName>Lifecycle_Field__c</fullName>
    <description>Field for which we are tracking changes</description>
    <label>Lifecycle Field</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>StageName</fullName>
            </value>
            <value>
                <fullName>Status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>