force-app/main/default/objects/BI_Metric__c/fields/New_Datetime__c.field-meta.xml
<CustomField>
    <fullName>New_Datetime__c</fullName>
    <description>If the lifecycle field is a date or time field, populate the original value here.</description>
    <label>New Datetime</label>
    <type>DateTime</type>
</CustomField>