force-app/main/default/objects/BI_Metric__c/fields/New_Number__c.field-meta.xml
<CustomField>
    <fullName>New_Number__c</fullName>
    <description>If the lifecycle field is a number (integer, decimal, currency) populate the original value here.</description>
    <label>New Number</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>