force-app/main/default/objects/BI_Metric__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>New value for the field.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>