force-app/main/default/objects/BI_Metric__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>If the BI metric is for an opportunity, link here</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Oop_BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>