force-app/main/default/objects/BI_Metric__c/fields/Owner_Alias__c.field-meta.xml
<CustomField>
    <fullName>Owner_Alias__c</fullName>
    <description>Owner alias at the time of this update.</description>
    <label>Owner Alias</label>
    <length>255</length>
    <type>Text</type>
</CustomField>