force-app/main/default/objects/BI_Metric__c/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that owns the record at the time the record was updated.</description>
    <label>Record Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Owner_BI_Metrics2</relationshipName>
    <type>Lookup</type>
</CustomField>