force-app/main/default/objects/BI_Metric__c/fields/Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Owner_Name__c</fullName>
    <description>Name of the owner of the record at the time of this edit.</description>
    <label>Onwer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>