force-app/main/default/objects/BI_Metric__c/fields/Owner_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Queue_Id__c</fullName>
    <description>The Queue user that owns the record at the time the record was updated.</description>
    <label>Owner Queue Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>