force-app/main/default/objects/BI_Metric__c/fields/Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Owner_Role__c</fullName>
    <description>Owner Role at the time of update.</description>
    <label>Owner Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>