force-app/main/default/objects/BI_Metric__c/fields/Previous_Record__c.field-meta.xml
<CustomField>
    <fullName>Previous_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Previous Record for this BI Metric</description>
    <inlineHelpText>Previous value &amp; information for the BI metric for this record &amp; field.</inlineHelpText>
    <label>Previous Record</label>
    <referenceTo>BI_Metric__c</referenceTo>
    <relationshipName>BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>