force-app/main/default/objects/BI_Metric__c/fields/Previous_Value__c.field-meta.xml
<CustomField>
    <fullName>Previous_Value__c</fullName>
    <formula>Previous_Record__r.New_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Previous Value</label>
    <type>Text</type>
</CustomField>