force-app/main/default/objects/BI_Metric__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>Text value of the source record id, to simplify queries</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>