force-app/main/default/objects/BI_Metric__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>Which date was the field updated to this value?</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>