force-app/main/default/objects/BI_Metric__c/fields/Updating_User__c.field-meta.xml
<CustomField>
    <fullName>Updating_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that actually updates the record, regardless of who owns the record.</description>
    <label>Updating User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Updating_BI_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>